add view squeleton

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">age_calculator_app</string>
+    <string name="welcomeMessage">welcome to age calculator app :)</string>
 </resources>
