add remaining visual components and color them

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,13 @@
 <resources>
     <string name="app_name">age_calculator_app</string>
     <string name="welcomeMessage">welcome to age calculator app :)</string>
+    <string name="calendarButtonText"> select age</string>
+    <string name="calculateButtonText"> calculate</string>
+    <string-array name="conversionOptions">
+        <item>Seconds</item>
+        <item>Minutes</item>
+        <item>Hours</item>
+        <item>Days</item>
+        <item>Months</item>
+    </string-array>
 </resources>
