--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,12 +3,14 @@
     <string name="welcomeMessage">welcome to age calculator app :)</string>
     <string name="calendarButtonText"> select age</string>
     <string name="calculateButtonText"> calculate</string>
+    <string name="resultDefaultText"> waiting…</string>
     <string-array name="conversionOptions">
         <item>select date format!</item>
         <item>seconds</item>
         <item>minutes</item>
         <item>hours</item>
         <item>days</item>
+        <item>weeks</item>
         <item>months</item>
     </string-array>
 </resources>
